<resources>
    <string name="app_name">MovieDB</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="confirmPasswordHint">Confirm Password</string>
    <string name="signupButton">Signup</string>
    <string name="signout">Sign out</string>
    <string name="enter">Enter</string>
    <string name="loginButton">Login</string>
    <string name="notRegisteredSignup">Not registered yet? Signup</string>
    <string name="alreadyRegisteredLogin">Already have an account? Login</string>
    <string name="movie_image_content_description">Movie Image</string>
    <string name="most_popular">Most Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="rating">Rating : </string>
    <string name="release_date">Release Date : </string>
    <string name="overview">Overview</string>
    <string name="title">Title : </string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="some_error_occurred">Some error occurred</string>
    <string name="movie_key">movie</string>
    <string name="ip_process_command">/system/bin/ping -c 1 8.8.8.8</string>
    <string name="TheMovieDbApiKey">The MovieDB API key</string>
</resources>
