<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryLight"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/vertical_middle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvNotRegisteredYet"
                style="@style/TextViewStyle"
                android:text="@string/notRegisteredSignup" />

            <EditText
                android:id="@+id/etEmailSignup"
                style="@style/EditTextStyle"
                android:hint="@string/emailHint"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/etPasswordSignup"
                style="@style/EditTextStyle"
                android:hint="@string/passwordHint"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/etConfirmPassword"
                style="@style/EditTextStyle"
                android:hint="@string/confirmPasswordHint"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btnSignUp"
                style="@style/ButtonStyle"
                android:layout_marginTop="@dimen/buttonMarginTop"
                android:text="@string/signupButton" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/vertical_middle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/tvAlreadyRegistered"
                style="@style/TextViewStyle"
                android:text="@string/alreadyRegisteredLogin" />

            <EditText
                android:id="@+id/etEmailLogin"
                style="@style/EditTextStyle"
                android:hint="@string/emailHint"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/etPasswordLogin"
                style="@style/EditTextStyle"
                android:hint="@string/passwordHint"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btnLogIn"
                style="@style/ButtonStyle"
                android:layout_marginTop="@dimen/buttonMarginTop"
                android:text="@string/loginButton" />

        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"
            tools:layout_editor_absoluteX="192dp"
            tools:layout_editor_absoluteY="0dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>